--- a/react_front_end/package.json
+++ b/react_front_end/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "reactstrap": "^8.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
